--- a/img.html
+++ b/img.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Imágenes</title>
+    <meta charset="UTF-8"
+    <title>Mi Galeria</title>
+    <link rel="stylesheet" href="estilos.css"
 </head>
 <body>
     <img src="file:///C:/Users/Usuario/OneDrive/Escritorio/Curso%20HTML%20and%20CSS/Clases%20CSS/Imagenes/JLGC_Expo%20AHR.jpg" alt="Imagen de la expo" title="JLGC en la Expor AHR">
