--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"
     <title>Mi Galeria</title>
-    <link rel="stylesheet" href="estilos.css"
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <img src="JLGC_Expo AHR.jpg" alt="Imagen de la expo" title="JLGC en la Expor AHR">
