--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <img src="JLGC_Expo AHR.jpg" alt="Imagen de la expo" title="JLGC en la Expor AHR">
+    <img src="JLGC_Expo%20AHR.jpg" alt="Imagen de la expo" title="JLGC en la Expor AHR">
 <br>
 <video src="C:\Users\Usuario\Videos\P-300 Controller\1.mkv" controls></video>
 </body>
