--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <img src="JLGC_Expo%20AHR.jpg" alt="Imagen de la expo" title="JLGC en la Expor AHR">
 <br>
-<video src="1.mkv" controls></video>
+<video src="1.mp4" controls></video>
 </body>
 </html>
