--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8"
     <title>Mi Galeria</title>
-    <link rel="stylesheet" href="estilos.css" width=300 height=200>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <img src="JLGC_Expo%20AHR.jpg" alt="Imagen de la expo" title="JLGC en la Expor AHR">
+    <img src="JLGC_Expo%20AHR.jpg"  width=300 height=200 alt="Imagen de la expo" title="JLGC en la Expor AHR">
 <br>
 <video src="1.mp4" controls></video>
 </body>
