--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <img src="JLGC_Expo%20AHR.jpg"  width=300 height=200 alt="Imagen de la expo" title="JLGC en la Expor AHR">
+    <img src="JLGC_Expo%20AHR.jpg"  width=100 height=auto alt="Imagen de la expo" title="JLGC en la Expor AHR">
 <br>
 <video src="1.mp4" controls></video>
 </body>
