--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <img src="JLGC_Expo%20AHR.jpg"  width=100 height=auto alt="Imagen de la expo" title="JLGC en la Expor AHR">
-<br>
-<video src="1.mp4" controls></video>
+<video controls src="1.mp4"></video>
 </body>
 </html>
