--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-<video controls src="1.mp4"></video>
+<video controls> <src="1.mp4"></video>
 </body>
 </html>
